syntax = "proto3";

package org.flowio.tenant.proto;

import "user.proto";

option java_multiple_files = true;
option java_outer_classname = "TenantServiceProto";

service TenantService {
  rpc create (TenantCreateRequest) returns (TenantCreateResponse) ;
  rpc get (TenantGetRequest) returns (TenantProto) ;
  rpc update (TenantUpdateRequest) returns (TenantProto) ;
  rpc listUsers (TenantListUsersRequest) returns (TenantListUsersResponse) ;
}

// objects
message TenantProto {
  int64 id = 1;
  string name = 2;
  int32 businessTypeId = 3;
}
message AdminUserProto {
  int64 id = 1;
  string email = 2;
  string password = 3;
}

// create
message TenantCreateRequest {
  string name = 1;
  string adminEmail = 2;
  int32 businessTypeId = 3;
}
message TenantCreateResponse {
  int64 id = 1;
  AdminUserProto adminUser = 2;
}

// get
message TenantGetRequest {
  int64 id = 1;
}

// update
message TenantUpdateRequest {
  int64 id = 1;
  string name = 2;
  int32 businessTypeId = 3;
}

// list users
message TenantListUsersRequest {
  int64 id = 1;
}
message TenantListUsersResponse {
  repeated UserProto users = 1;
}
